--- a/src/style/index.less
+++ b/src/style/index.less
@@ -9,19 +9,17 @@
     .t(0);
     .l(0);
     .r(0);
-    .dpw;
-    .dpw;
+    // .dpw;
     align-items: center;
     .dbs;
     .control{
-        width: 100%;
+        padding: 0 10px;
         max-width: 2000px;
-        .h(24);
         .fs(12);
         .lh(20);
         background-color: @dbc;
-        .dpw;
         .content{
+            .h(24);
             display: flex;
             align-items: center;
             .version{
@@ -46,6 +44,7 @@
     }
     >.content{
         margin: 0 auto;
+        padding: 0 10px;
         display: flex;
         align-items: center;
         flex-wrap: wrap;
@@ -115,7 +114,9 @@
 .container_wrapper{
     flex-grow: 1;
     width: 100%;
-    .dpw;
+    // .dpw;
+    // max-width: 1000px;
+    margin: 0 auto;
     .pt(90);
 }
 @import 'bundle.less';
