--- a/src/style/common.less
+++ b/src/style/common.less
@@ -3,38 +3,44 @@
 @dhc: #333;
 @dfhc: #4FB660;
 @dlc: #CECECE;
-.dbs{
-    box-shadow: 0 2px 4px fadeout(black,96%);
+.dbs {
+    box-shadow: 0 2px 4px fadeout(black, 96%);
 }
-.space{
+
+.space {
     .w(10);
     flex-grow: 1;
 }
-*{
+
+* {
     font-family: '微软雅黑';
 }
-html{
+
+html {
     overflow-y: scroll;
     height: 100%;
 }
-body{
+
+body {
     min-height: 100%;
     .fs(16);
     color: @dfc;
     background-color: @dbc;
     display: flex;
-    flex-direction: column;
-    // justify-content: center;
+    flex-direction: column; // justify-content: center;
 }
-.dpw{
-    >div{
+
+.dpw {
+    >div {
         width: 100%;
         max-width: 1000px;
         margin: 0 auto;
     }
 }
 
-.btn_default{
+
+
+.btn_default {
     background-color: @dfhc;
     color: white;
     border: none;
@@ -45,32 +51,52 @@ body{
     .lh(30);
     .br(30);
     cursor: pointer;
-    &:hover{
+    &:hover {
         background-color: darken(@dfhc, 10%);
     }
-    &:active{
+    &:active {
         background-color: @dfhc;
     }
 }
-input,button,textarea{
-    &:focus{
+
+input,
+button,
+textarea {
+    &:focus {
         outline: none;
     }
 }
-.article{
-    table{
-        
+
+.article {
+    table {}
+}
+.label_list {
+    display: flex;
+    flex-wrap: wrap;
+    li {
+        border: 1px solid @dfhc;
+        margin: 4px 4px 4px 0;
+        padding: 4px 8px;
+        .br(20);
+        .fs(12);
+        color: @dfhc;
+        cursor: pointer;
+        transition: background-color,color 0.2s linear;
+        &:hover{
+            background-color: @dfhc;
+            color: white;
+        }
     }
 }
-.form{
-    .form_group{
+.form {
+    .form_group {
         border: 1px solid @dlc;
         display: flex;
         .br(30);
         overflow: hidden;
         .mb(10);
         .dbs;
-        .label{
+        .label {
             background-color: @dfhc;
             .h(30);
             .lh(30);
@@ -78,7 +104,7 @@ input,button,textarea{
             .tac;
             color: white;
         }
-        input[type=text]{
+        input[type=text] {
             .db;
             .w(200);
             .h(30);
@@ -88,17 +114,18 @@ input,button,textarea{
         }
     }
 }
-.article_item{
+
+.article_item {
     background-color: white;
     .dbs;
     .br(0);
     .mb(20);
     padding: 10px;
     .br(2);
-    &:hover{
-        box-shadow: 0 2px 4px fadeout(black,80%);
+    &:hover {
+        box-shadow: 0 2px 4px fadeout(black, 80%);
     }
-    .title{
+    .title {
         font-weight: bold;
         color: @dhc;
         cursor: pointer;
@@ -106,35 +133,26 @@ input,button,textarea{
         .lh(30);
         .fs(16);
     }
-    .label_wrapper{
+    .label_wrapper {
         display: flex;
         align-items: center;
         border-bottom: 1px solid @dlc;
         .pb(10);
         .fs(12);
-        .labels{
-            display: flex;
-            li{
-                border: 1px solid @dfhc;
-                margin: 4px 4px 4px 0;
-                padding: 4px 8px;
-                .br(20);
-                .fs(12);
-                color: @dfhc;
-            }
-        }
-        .author,.add_date,.read_count{
+        .author,
+        .add_date,
+        .read_count {
             .mr(20);
         }
     }
-    .content{
+    .content {
         max-height: 240px;
         overflow: hidden;
-        p{
+        p {
             margin: 10px 0;
         }
     }
-    .detail{
+    .detail {
         .tac;
         border-top: 1px solid @dlc;
         color: @dfhc;
