--- a/src/components/admin/admin.less
+++ b/src/components/admin/admin.less
@@ -1,53 +1,49 @@
-.adminPage{
-    padding: 0 10px;
-    .title_group,.label_group{
-        display: flex;
-        align-items: center;
-        border: 1px solid @dlc;
-        background-color: white;
-        // box-sizing: border-box;
-        min-height: 40px;
-        .mb(10);
-        .label{
-            flex-shrink: 0;
-            padding: 0 10px;
-        }
-        input{
-            flex-grow: 1;
-            .h(40);
-            .lh(40);
-            padding: 0 10px;
-        }
-        .active{
-            background-color: @dfhc;
+.adminPage {
+    height: 100%;
+    display: flex; // align-items: stretch;
+    .admin_left {
+        flex-shrink: 0;
+        .w(200);
+        color: white;
+        background-color: darken(@dbc, 50%);
+        .pt(20);
+        .back {
+            .db;
+            border: 1px solid @dfhc;
+            .w(180);
+            .h(50);
+            .lh(50);
+            .tac;
+            .br(100);
+            cursor: pointer;
+            background-color: transparent;
             color: white;
+            .fs(20);
+            transition: all 0.2s linear;
+            padding: 0;
+            margin: 0 auto;
+            .mb(20);
+            &:hover {
+                background-color: @dfhc;
+            }
         }
+        .menu {
+            span {
+                .fs(20);
+            }
+            li {
+                cursor: pointer;
+                .h(40);
+                .lh(40);
+                padding: 0 10px;
+                &:hover {
+                    color: @dfhc;
+                }
+            }
+        }
+    }
+    .admin_right{
+        flex-grow: 1;
     }
     
-    .workplace{
-        display: flex;
-        border: 1px solid @dlc;
-        textarea{
-            resize: none;
-            width: 100%;
-            .h(400);
-            border: none;
-            border-right: 1px solid @dlc;
-        }
-        .editor,.preview{
-            .w(10);
-            // height: 100%;
-            align-self: stretch;
-            padding: 10px;
-            background-color: white;
-            flex-grow: 1;
-        }
-        .preview{
-            background-color: lighten(@dbc, 2%);
-            // background-color: red;
-        }
-    }
-    button{
-        .mt(10);
-    }
 }
