--- a/src/components/home/home.less
+++ b/src/components/home/home.less
@@ -1,32 +1,141 @@
 .homePage{
-    display: flex;
-    flex-direction: row-reverse;
-    .label_menu{
-        align-self: flex-start;
-        flex-shrink: 0;
-        .w(260);
-        .dbs;
+    .pt(90);
+    .menu_wrapper{
         background-color: white;
-        padding: 10px;
-        ul{
-            li{
+        .ptf;
+        .t(0);
+        .l(0);
+        .r(0);
+        // .dpw;
+        align-items: center;
+        .dbs;
+        .control{
+            padding: 0 10px;
+            .fs(12);
+            .lh(20);
+            background-color: @dbc;
+            .content{
+                .h(24);
                 display: flex;
                 align-items: center;
-                cursor: pointer;
-                &:hover{
-                    color: @dfhc;
+                max-width: 1200px;
+                margin: 0 auto;
+                .version{
+                    display: flex;
+                    li{
+                        padding: 0 10px;
+                        &.active{
+                            color: @dfhc;
+                        }
+                    }
                 }
-                .name{
-                    flex-grow: 1;
+                .login{
+                    box-sizing: border-box;
+                    cursor: pointer;
+                    &:hover{
+                        border-bottom: 1px solid @dfhc;
+                        color: @dfhc;
+                    }
+                }
+            }
+            
+        }
+        >.content{
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 10px;
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            .logo{
+                flex-shrink: 0;
+                font-weight: 700;
+                flex-shrink: 0;
+                font-size: 30px;
+                color: black;
+                letter-spacing: -2px;
+                .mr(20);
+            }
+            .menu{
+                flex-shrink: 0;
+                display: flex;
+                align-items: center;
+                text-align: right;
+                .mr(10);
+                li{
+                    .h(60);
+                    padding: 0 20px;
+                    .lh(60);
+                    cursor: pointer;
+                    &:hover{
+                        color: @dfhc;
+                    }
+                    &.active{
+                        font-weight: bold;
+                        color: @dfhc;
+                    }
+                }
+            }
+            .search{
+                flex-shrink: 0;
+                .ptr;
+                overflow: hidden;
+                .tar;
+                box-sizing: border-box;
+                input{
+                    .w(140);
+                    .h(30);
+                    .br(30);
+                    border: 1px solid @dlc;
+                    .lh(30);
+                    padding: 0 16px;
+                    transition: all 0.1s linear;
+                    &:focus{
+                        .w(300);
+                    }
+                }
+                .icon{
+                    .pta;
+                    .t(0);
+                    .r(0);
+                    background-color: @dfhc;
                     .h(30);
                     .lh(30);
+                    border-top-right-radius: 30px;
+                    border-bottom-right-radius: 30px;
+                    border: 1px solid @dfhc;
+                    color: white;
+                    padding: 0 10px;
+                    cursor: pointer;
+                }
+            }
+            .user{
+                .w(44);
+                .h(44);
+                .mr(10);
+            }
+            .user_name{
+                .mr(30);
+            }
+            .write{
+                background-color: @dfhc;
+                padding: 0 20px;
+                color: white;
+                .h(40);
+                .lh(40);
+                .tac;
+                .br(50);
+                cursor: pointer;
+                transition: all 0.2s linear;
+                &:hover{
+                    background-color: darken(@dfhc, 10%);
                 }
             }
         }
     }
-    .article_wrapper{
-        flex-grow: 1;
-        .mr(20);
+    .home_container{
+        // .mt(90);
     }
+    
 
 }
