--- a/src/style/common.less
+++ b/src/style/common.less
@@ -147,7 +147,9 @@ textarea {
     li {
         border: 1px solid @dfhc;
         margin: 4px 4px 4px 0;
-        padding: 4px 8px;
+        padding: 0 10px;
+        .h(20);
+        .lh(20);
         .br(20);
         .fs(12);
         color: @dfhc;
