--- a/src/components/home_list/home_list.less
+++ b/src/components/home_list/home_list.less
@@ -28,6 +28,7 @@
     }
     .article_wrapper{
         flex-grow: 1;
+        .w(10);
         .mr(20);
         .article_content{
             max-height: 300px;
