--- a/src/components/admin_article/admin_article.less
+++ b/src/components/admin_article/admin_article.less
@@ -4,7 +4,34 @@
     display: flex;
     flex-direction: column;
     // .pt(10);
+    .title_group,
+    .label_group {
+        flex-shrink: 0;
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid @dlc;
+        background-color: white; // box-sizing: border-box;
+        min-height: 40px;
+        .label {
+            flex-shrink: 0;
+            padding: 0 10px;
+        }
+        input {
+            flex-grow: 1;
+            .h(40);
+            .lh(40);
+            padding: 0 10px;
+        }
+        .active {
+            background-color: @dfhc;
+            color: white;
+        }
+    }
+    .label_group{
+        padding: 10px 0;
+    }
     .tools {
+        flex-shrink: 0;
         border-bottom: 1px solid @dlc;
         .h(40);
         .lh(40);
@@ -31,11 +58,11 @@
             display: flex;
             padding: 0 10px;
             background-color: white;
+            border-right: 1px solid @dlc;
             textarea {
                 flex-grow: 1;
                 resize: none;
                 border: none;
-                border-right: 1px solid @dlc;
                 .fs(14);
                 .lh(20);
                 padding: 10px 0;
@@ -53,27 +80,5 @@
                 padding: 0;
             }
         }
-    }
-}
-.title_group,
-.label_group {
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid @dlc;
-    background-color: white; // box-sizing: border-box;
-    min-height: 40px;
-    .label {
-        flex-shrink: 0;
-        padding: 0 10px;
-    }
-    input {
-        flex-grow: 1;
-        .h(40);
-        .lh(40);
-        padding: 0 10px;
-    }
-    .active {
-        background-color: @dfhc;
-        color: white;
     }
 }
