登录和注册页已调试完成

--- a/src/components/home/home.less
+++ b/src/components/home/home.less
@@ -55,6 +55,7 @@
                 color: black;
                 letter-spacing: -2px;
                 .mr(20);
+                cursor: pointer;
             }
             .menu{
                 flex-shrink: 0;
