--- a/src/components/admin_article/admin_article.less
+++ b/src/components/admin_article/admin_article.less
@@ -38,6 +38,7 @@
         display: flex;
         align-items: center;
         padding: 0 10px;
+        background-color: @dlc;
         button {
             .w(100);
             .ml(10);
