--- a/src/components/home_list/home_list.less
+++ b/src/components/home_list/home_list.less
@@ -1,24 +1,30 @@
-.home_list{
-	max-width: 1200px;
-	margin: 0 auto;
-	display: flex;
-	flex-direction: row-reverse;
-	.label_menu{
+.home_list {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row-reverse;
+    overflow: hidden;
+    .label_menu {
         align-self: flex-start;
         flex-shrink: 0;
         .w(260);
         .dbs;
         background-color: white;
         padding: 10px;
-        ul{
-            li{
+        box-shadow: 2px 2px 4px fadeout(black, 60%);
+        .br(4);
+        ul {
+            li {
                 display: flex;
                 align-items: center;
                 cursor: pointer;
-                &:hover{
+                &:hover {
                     color: @dfhc;
                 }
-                .name{
+                &.active{
+                    color: @dfhc;
+                }
+                .name {
                     flex-grow: 1;
                     .h(30);
                     .lh(30);
@@ -26,13 +32,44 @@
             }
         }
     }
-    .article_wrapper{
+    .article_wrapper {
         flex-grow: 1;
+        align-self: stretch;
+        min-height: 100%;
+        overflow: hidden;
         .w(10);
         .mr(20);
-        .article_content{
-            max-height: 300px;
+        .no_data{
+            background-color: white;
+            .tac;
+            .pt(100);
+            .pb(100);
+        }
+        .article_list{
+            height: 100%;
+            .mr(-10);
+            overflow-y: scroll;
+        }
+        .article_item {
             overflow: hidden;
+            .ptr;
+            .t(0);
+            .l(0);
+            transition: all 0.2s linear;
+            .br(4);
+            .mr(10);
+            overflow: hidden;
+            .article_content{
+                max-height: 320px;
+                // background-color: @dlc;
+                color: fadeout(@dfc, 20%);
+                overflow-y: hidden;
+            }
+            .markdown-body{
+                h1,h2{
+                    .fs(14);
+                }
+            }
         }
     }
 }
