--- a/src/components/home_register/home_register.less
+++ b/src/components/home_register/home_register.less
@@ -4,11 +4,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    .form{
+        .w(400);
+    }
     .title{
         padding: 10px 0;
         .fs(16);
         width: 100%;
         .tac;
+        color: white;
+        padding: 20px 0;
     }
     .form{
         .pt(100);
@@ -19,5 +24,6 @@
     }
     button{
         .mb(10);
+        .dbs;
     }
 }
