--- a/src/style/index.less
+++ b/src/style/index.less
@@ -14,6 +14,10 @@ body {
     .fs(16);
     color: @dfc;
     background-color: @dbc;
+    background-image: url("../images/body_bg.jpg");
+    background-size: 100% auto;
+    background-position: center center;
+    background-attachment: fixed;
 }
 .container_wrapper{
     min-height: 100%;
