--- a/src/style/common.less
+++ b/src/style/common.less
@@ -190,7 +190,7 @@ textarea {
 
 .article_item {
     background-color: white;
-    .dbs;
+    // .dbs;
     .br(0);
     .mb(10);
     padding: 10px;
