重构标签表

--- a/src/components/admin/admin.html
+++ b/src/components/admin/admin.html
@@ -4,7 +4,7 @@
         <ul class="menu">
             <li ui-sref=".new"><span>+</span> 新建文章</li>
             <li ui-sref=".label" ng-show="labelControl"><span>+</span> 标签管理</li>
-            <li ui-sref=".list"><span>+</span> 所有文章</li>
+            <li ui-sref=".list"><span>+</span> 我的文章</li>
         </ul>
     </div>
     <div class="admin_right" ui-view=""></div>
