--- a/src/components/admin_article/admin_article.less
+++ b/src/components/admin_article/admin_article.less
@@ -16,6 +16,13 @@
             flex-shrink: 0;
             padding: 0 10px;
         }
+        li{
+            cursor: pointer;
+            &:hover{
+                background-color: @dfhc;
+                color: white;
+            }
+        }
         input {
             flex-grow: 1;
             .h(40);
