--- a/src/components/home_list/home_list.less
+++ b/src/components/home_list/home_list.less
@@ -59,6 +59,9 @@
             .br(4);
             .mr(10);
             overflow: hidden;
+            .author span{
+                color: @dfhc;
+            }
             .article_content{
                 max-height: 320px;
                 // background-color: @dlc;
