--- a/src/style/common.less
+++ b/src/style/common.less
@@ -3,10 +3,6 @@
 @dhc: #333;
 @dfhc: #4FB660;
 @dlc: #CECECE;
-button{
-    margin: 0;
-    padding: 0;
-}
 .dbs {
     box-shadow: 2px 2px 4px fadeout(black, 60%);
 }
@@ -17,7 +13,7 @@ button{
 }
 
 * {
-    font-family: '微软雅黑';
+    font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .pic{
@@ -150,11 +146,11 @@ textarea {
         .br(20);
         .fs(12);
         color: @dfhc;
-        cursor: pointer;
+        // cursor: pointer;
         transition: background-color,color 0.2s linear;
         &:hover{
-            background-color: @dfhc;
-            color: white;
+            // background-color: @dfhc;
+            // color: white;
         }
     }
 }
