--- a/src/components/admin_article/admin_article.html
+++ b/src/components/admin_article/admin_article.html
@@ -6,20 +6,20 @@
 	<div class="label_group" ng-click="showLabel($event)">
 		<span class="label">标签：</span>
 		<ul class="label_list">
-			<li ng-click="toggleLabel(item)" class="{{item.select ? 'active' : ''}}" ng-repeat="item in labels" ng-bind="item.name"></li>
+			<li ng-click="toggleLabel(item)" class="{{item.select ? 'active' : ''}}" ng-repeat="item in all_labels" ng-bind="item.name"></li>
 			<li ng-click="addLabel()">添加标签</li>
 		</ul>
 	</div>
 	<div class="tools">
 		<span class="space"></span>
-		<input type="file" onchange="angular.element(this).scope().fileChange(this)" name="file">
+		<input type="file" style="display: none;" onchange="angular.element(this).scope().fileChange(this)" name="file">
 		<button class="btn_default" ng-click="addImage()">添加图片</button>
 		<button class="btn_default" title="{{showPreview?'关闭预览窗':'打开预览窗'}}" ng-click="togglePreview()" ng-bind="showPreview?'关闭预览窗':'打开预览窗'"></button>
 		<button class="btn_default" ng-click="save()">发布</button>
 	</div>
 	<div class="workplace">
 		<div class="editor">
-			<textarea ng-change="change()" ng-model="content">
+			<textarea ng-click="contentClick($event)" ng-change="contentChange()" ng-model="content" autofocus>
             </textarea>
 		</div>
 		<div class="preview markdown-body {{showPreview?'':'hide'}}" ng-bind-html="content | html"></div>
