--- a/src/components/home_article/home_article.html
+++ b/src/components/home_article/home_article.html
@@ -3,14 +3,31 @@
         <h3 class="title" ng-bind="detail.title"></h3>
         <div class="label_wrapper">
             <ul class="label_list" >
-                <li ng-repeat="item in detail.labels" ng-bind="item.name" ng-show="item.select"></li>
+                <li ng-repeat="item in detail.labels" ng-bind="item" ></li>
             </ul>
             <div class="space"></div>
+            <div class="author">发布人: <span ng-bind="detail.author"></span></div>
             <div class="add_date">发布时间: <span ng-bind="detail.add_date"></span></div>
             <div class="read_count">阅读: <span ng-bind="detail.read">1468</span></div>
         </div>
         <div class="article_content">
             <div class="markdown-body" ng-bind-html="detail.content | html"></div>
+        </div>
+        <div class="comments_wrapper">
+            <h3 class="header">
+                <span>评论</span>
+            </h3>
+            <div class="comments_item" ng-repeat="itme in [1,2,3]">
+                <div class="content">写的真好</div>
+                <div class="info">
+                    <span class="author">John Alien</span>
+                    <span class="add_date">2016-07-12 11:30:12</span>
+                </div>
+            </div>
+            <div class="add_comments">
+                <textarea></textarea>
+                <button class="btn_default">发表评论</button>
+            </div>
         </div>
         <!-- <div class="detail">查看更多</div> -->
     </div>
