--- a/src/components/home_login/home_login.html
+++ b/src/components/home_login/home_login.html
@@ -2,8 +2,8 @@
 	<div class="form">
 		<h1 class="title">账号登陆</h1>
 		<div class="form_group">
-			<span class="label">账号</span>
-			<input type="text" ng-model="phone" ng-keyup="keyUp($event)">
+			<span class="label">用户名</span>
+			<input type="text" ng-model="uname" ng-keyup="keyUp($event)">
 		</div>
 		<div class="form_group">
 			<span class="label">密码</span>
