--- a/src/components/home_register/home_register.html
+++ b/src/components/home_register/home_register.html
@@ -2,12 +2,16 @@
 	<div class="form">
 		<h1 class="title">账号注册</h1>
 		<div class="form_group">
-			<span class="label">账号</span>
-			<input type="text" ng-model="phone" placeholder="目前仅支持手机号码注册" ng-keyup="keyUp($event)">
+			<span class="label">用户名</span>
+			<input type="text" ng-model="uname" placeholder="请设置您的登录用户名" ng-keyup="keyUp($event)">
 		</div>
+		<!-- <div class="form_group">
+			<span class="label">手机号码</span>
+			<input type="text" ng-model="phone" placeholder="请输入您的手机号码" ng-keyup="keyUp($event)">
+		</div> -->
 		<div class="form_group">
 			<span class="label">密码</span>
-			<input type="password" ng-model="passwd" ng-keyup="keyUp($event)">
+			<input type="password" ng-model="passwd" placeholder="请设置您的登录密码" ng-keyup="keyUp($event)">
 		</div>
 		<button class="btn_default" ng-click="register()">注册</button>
 		<button class="btn_default" ui-sref="home.login">登录</button>
