--- a/src/style/reset.less
+++ b/src/style/reset.less
@@ -88,3 +88,9 @@
      -webkit-text-size-adjust: none;
      -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }
+ 
+button{
+    margin: 0;
+    padding: 0;
+    border: none;
+}
