用户登录方式改为登录名；完善文章所有的接口调试

--- a/src/components/admin_label/admin_label.less
+++ b/src/components/admin_label/admin_label.less
@@ -19,6 +19,11 @@
         }
     }
 	.table{
+        // background-color: white;
+        // color: white;
         .mb(20);
+        .fs(12);
+        border-left: none;
+        border-right: none;
     }
 }
