--- a/src/components/admin_log/admin_log.html
+++ b/src/components/admin_log/admin_log.html
@@ -1,9 +1,4 @@
-<div class="admin_label">
-	<div class="add">
-		<div class="space"></div>
-		<input type="text" class="addLabel" ng-model="name" ng-keyup="keyUp($event)">
-		<button class="btn_default " ng-click="addLabel()">增加标签</button>
-	</div>
+<div class="admin_log">
 	<div class="table">
 		<ul class="thead">
 			<li>标签id</li>
@@ -26,7 +21,4 @@
 			</li>
 		</ul>
 	</div>
-	<div app-alert=""  ng-show="alertVisiable"></div>
-	<div app-confirm=""  ng-show="confirmVisiable"></div>
-	
 </div>
