--- a/src/components/home_article/home_article.html
+++ b/src/components/home_article/home_article.html
@@ -15,7 +15,7 @@
         </div>
         <div class="comments_wrapper">
             <h3 class="header">
-                <span>评论</span>
+                <!-- <span>评论</span> -->
             </h3>
             <div class="comments_item" ng-repeat="itme in [1,2,3]">
                 <div class="content">写的真好</div>
