--- a/src/components/home_article/home_article.less
+++ b/src/components/home_article/home_article.less
@@ -23,11 +23,13 @@
 			border-top: 1px solid @dlc;
 			padding: 10px 0;
 			.content{
-				padding: 10px 0;
+				padding: 10px;
+				.fs(14);
 			}
 			.info{
 				.tar;
 				font-weight: lighter;
+				.fs(12);
 				.author{
 					.mr(10);
 				}
