--- a/src/style/common.less
+++ b/src/style/common.less
@@ -122,6 +122,7 @@ textarea {
     }
     .tbody{
         li{
+            .h(20);
             .pt(6);
             .pb(6);
             display: flex;
