--- a/src/components/home/home.html
+++ b/src/components/home/home.html
@@ -25,8 +25,8 @@
                     <span></span>
                 </div>
             </div> -->
-            <div class="userInfo" ng-show="dict.cache.uname">
-                <span ng-bind="dict.cache.uname"></span>
+            <div class="userInfo" ng-show="dict.cache.ni_name">
+                <span ng-bind="dict.cache.ni_name"></span>
                 <span ng-click="logout()" class="logout_btn">退出</span>
             </div>
             <div class="write" ui-sref="admin.new">写文章</div>
