恢复到全局的弹窗和confirm；  重写新增文章的逻辑； 新增添加图片的返回操作； file方法与post保持一致的返回内容；

--- a/src/components/home_article/home_article.html
+++ b/src/components/home_article/home_article.html
@@ -8,7 +8,7 @@
             <div class="space"></div>
             <div class="author">发布人: <span ng-bind="detail.author"></span></div>
             <div class="add_date">发布时间: <span ng-bind="detail.add_date"></span></div>
-            <div class="read_count">阅读: <span ng-bind="detail.read">1468</span></div>
+            <div class="read_count">阅读: <span ng-bind="detail.read_count">1468</span></div>
         </div>
         <div class="article_content">
             <div class="markdown-body" ng-bind-html="detail.content | html"></div>
