--- a/src/components/admin/admin.html
+++ b/src/components/admin/admin.html
@@ -2,11 +2,10 @@
     <div class="admin_left">
         <button class="back" ui-sref="home.list">回首页</button>
         <ul class="menu">
-            <li ui-sref=".new"><span>+</span> 新建文章</li>
+            <li ng-click="newArticle()"><span>+</span> 新建文章</li>
             <li ui-sref=".label" ng-show="labelControl"><span>+</span> 标签管理</li>
             <li ui-sref=".list"><span>+</span> 我的文章</li>
         </ul>
     </div>
     <div class="admin_right" ui-view=""></div>
-    
 </div>
