--- a/src/components/home/home.html
+++ b/src/components/home/home.html
@@ -29,7 +29,7 @@
                 <span ng-bind="dict.cache.ni_name"></span>
                 <span ng-click="logout()" class="logout_btn">退出</span>
             </div>
-            <div class="write" ui-sref="admin.new">写文章</div>
+            <div class="write" ui-sref="admin.article">写文章</div>
         </div>
     </div>
     <div class="home_container" ui-view="">
